# udevme

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
examples/: 99-udevme.rules.example  notes.json.example  udevme.json.example
packaging/: PKGBUILD  build.sh  build_appimage.sh  install.sh  udevme.desktop  uninstall.sh
resources/: resources.qrc
src/: main.cpp
src/core/: AppScanner.cpp  AppScanner.h  ConfigStore.cpp  ConfigStore.h  DeviceScanner.cpp  DeviceScanner.h  RuleGenerator.cpp  RuleGenerator.h  RuleModel.cpp  RuleModel.h  RuleParser.cpp  RuleParser.h  Types.h
src/ui/: AddRuleDialog.cpp  AddRuleDialog.h  LogWidget.cpp  LogWidget.h  MainWindow.cpp  MainWindow.h
tests/: CMakeLists.txt  test_rules.cpp
